--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "project2_1"]
+[submodule "rgb_mixer"]
 	path = rgb_mixer
-	url = https://github.com/mattvenn/project2_1
+	url = https://github.com/hansemro/rgb_mixer
